--- a/appz.yml
+++ b/appz.yml
@@ -1,8 +1,8 @@
 app:
     name: prometheus
     code: prometheus
-    notify: appzdev@cloudbourne.co
-
+    notify: srswain@ecloudcontrol.com
+    
 build:
     version: 2.17
     env: DEV
@@ -22,7 +22,7 @@ volumes:
     mount: /appz/data
     name: data
     size: 50Gi
-    matchLabels: false
+    
     
   
 properties:
