--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -182,7 +182,7 @@ scrape_configs:
     - source_labels: [pod]
       #regex: '((.*)hellonode(.*))'
       #regex: '((.*)hellonode(.*))'|'kbfc(.*))'
-      regex: 'apexaiq.*|mdm.*'
+      regex: 'apexaiq.*'
       action: keep
 
     - source_labels: [__address__]
