--- a/appz.yml
+++ b/appz.yml
@@ -5,13 +5,13 @@ app:
 
 build:
     version: 2.17
-    env: DEV
+    env: DEV2
     build_file: none
     output_files: output/*.zip
     image_template: prometheus-2.17
 
 deploy:
-    context: alpha/DEV
+    context: alpha/PROD2
     type: statefulset
     replicas: 1
     port:
@@ -23,8 +23,6 @@ volumes:
     name: data
     size: 50Gi
     matchLabels: false
-    
   
 properties:
-    revision : 91
-    
+    revision : 67
