--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -35,7 +35,7 @@ scrape_configs:
       match[]:
         - '{job=~"kube-state-metrics|kubernetes-cadvisor|nodejs|rabbitmq_exporter|redis"}'
     static_configs:
-     - targets: ['alpha-prod-prometheus-2-17.0383898a.lowtouch.cloud:443']
+     - targets: ['alpha-prod-prometheus-2-17.0383898a.lowtouch.cloud:443','alpha-prod2-prometheus-2-17.0383898a.lowtouch.cloud:443','alpha-dev2-prometheus-2-17.0383898a.lowtouch.cloud:443']
 
   - job_name: 'node-exporter'
     static_configs:
