--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -35,8 +35,8 @@ scrape_configs:
       match[]:
         - '{job=~"kube-state-metrics|kubernetes-cadvisor|nodejs|rabbitmq_exporter|redis"}'
     static_configs:
-     - targets: 
-       - 'alpha-prod-prometheus-2-17.0383898a.lowtouch.cloud:443'
+     - targets: - targets: ['alpha-prod-prometheus-2-17.0383898a.lowtouch.cloud:443']
+       
        
   - job_name: 'node-exporter'
     static_configs:
