--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -25,7 +25,7 @@ scrape_configs:
     static_configs:
     - targets: ['localhost:9090']
  
-  - job_name: 'federation'
+#  - job_name: 'federation'
     scrape_interval: 20s
     scrape_timeout: 20s
     scheme: https
