--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -26,7 +26,7 @@ scrape_configs:
   
   - job_name: 'node-exporter'
     static_configs:
-    - targets: ['172.31.19.166:9100','172.31.31.229:9100','172.31.28.34:9100','172.31.31.172:9100']
+    - targets: ['172.31.19.166:9100','172.31.31.229:9100','172.31.28.34:9100',]
     metric_relabel_configs:
       - source_labels: ['nodename']
         regex: '(engine.master)'
