--- a/appz.yml
+++ b/appz.yml
@@ -1,7 +1,7 @@
 app:
     name: prometheus
     code: prometheus
-    notify: srswain@ecloudcontrol.com
+    notify: nmeeran@ecloudcontrol.com
     
 build:
     version: 2.17
@@ -26,4 +26,4 @@ volumes:
     
   
 properties:
-    revision : 101
+    revision : 1
