--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -204,3 +204,22 @@ scrape_configs:
       regex: '.*'
       target_label: instance
       replacement: 'Appz${1}'
+      
+    - job_name: 'blackbox'
+    metrics_path: /probe
+    params:
+     module: [http_2xx] 
+    static_configs:
+    - targets:
+       - https://app.apexaiq.com/api/v1/health/ping/
+       - https://eu.apexaiq.com/api/v1/health/ping/
+       - https://az.apexaiq.com/ui/
+       - https://docs.apexaiq.com/
+       
+      relabel_configs:
+      - source_labels: [__address__]
+        target_label: __param_target
+      - source_labels: [__param_target]
+        target_label: instance
+      - target_label: __address__
+        replacement: blackbox-exporter-0-2:9115
