--- a/appz.yml
+++ b/appz.yml
@@ -14,6 +14,7 @@ deploy:
     context: alpha/DEV
     type: statefulset
     replicas: 1
+    resources: none
     ingress: nodeport
     port:
     - 9090
