--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -49,7 +49,7 @@ scrape_configs:
       target_label: pod
 
     - source_labels: [pod]
-      regex: redis.*
+      regex: '((.*)redis(.*))'
       action: keep   
 
     - source_labels: [__address__]
