--- a/alerts.yaml
+++ b/alerts.yaml
@@ -51,7 +51,7 @@ groups:
 - name: CPU-load
   rules:
   - alert: HighNodeCPU
-    expr: node_load15 / count by (instance, job) (node_cpu_seconds_total{mode="idle"}) >=2
+    expr: rate(node_load15[5m])*100 > 85
     for : 5m
     labels:
       severity: warning
