--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -143,6 +143,33 @@ scrape_configs:
       target_label: instance
       replacement: 'AppZ${1}'
       
+  - job_name: 'mongodb_exporter'
+    kubernetes_sd_configs:
+    - role: endpoints
+    
+    relabel_configs:
+    - source_labels: [__meta_kubernetes_namespace]
+      action: replace
+      target_label: namespace
+    - source_labels: [__meta_kubernetes_pod_name]
+      action: replace
+      target_label: pod
+
+    - source_labels: [pod]
+      regex: '((.*)mongodb(.*))'
+      action: keep   
+
+    - source_labels: [__address__]
+      target_label: __address__
+      regex: '([^:]+)(:[27000]+)?'
+      replacement: '${1}'
+      action: drop
+      
+    - source_labels: [__address__]
+      regex: '.*'
+      target_label: instance
+      replacement: 'AppZ${1}'
+      
   - job_name: 'yace'
     scrape_interval: 60s
     static_configs:
