--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -5,6 +5,7 @@ global:
   # scrape_timeout is set to the global default (10s).
   external_labels:
     datacenter: primary
+
 # Alertmanager configuration
 alerting:
   alertmanagers:
@@ -24,22 +25,9 @@ scrape_configs:
   - job_name: 'prometheus'
     static_configs:
     - targets: ['localhost:9090']
-
-  - job_name: 'federation'
-    scrape_interval: 20s
-    scrape_timeout: 20s
-    scheme: https
-    metrics_path: /federate
-    honor_labels: true
-    params:
-      match[]:
-        - '{job=~"kube-state-metrics|kubernetes-cadvisor"}'
-    static_configs:
-      - targets: ['alpha-qa-prometheus-2-17.038ecc66.lowtouch.cloud:443']
-      
   - job_name: 'node-exporter'
     static_configs:
-    - targets: ['172.31.17.121:9100','172.31.28.19:9100','172.31.25.240:9100','172.31.31.27:9100','172.31.24.133:9100','192.168.103.189:9100','192.168.163.143:9100','192.168.130.193:9100']
+    - targets: ['172.31.20.210:9100','172.31.48.127:9100','172.31.62.118:9100']
     metric_relabel_configs:
       - source_labels: ['nodename']
         regex: '(engine.master)'
@@ -49,21 +37,6 @@ scrape_configs:
         regex: 'k8s.(.*)'
         target_label: nodename
         replacement: appz-${1}
-      - source_labels: ['nodename']
-        regex: 'ip-192-168-103-189.us-east-2.compute.internal'
-        target_label: nodename
-        replacement: appz-qa-worker-1
-      - source_labels: ['nodename']
-        regex: 'ip-192-168-163-143.us-east-2.compute.internal'
-        target_label: nodename
-        replacement: appz-qa-worker-2
-      - source_labels: ['nodename']
-        regex: 'ip-192-168-130-193.us-east-2.compute.internal'
-        target_label: nodename
-        replacement: appz-qa-worker-3 
-
-
-
   - job_name: 'kube-state-metrics'
     static_configs:
     - targets: ['kube-state-metrics.kube-system.svc.cluster.local:8080']
@@ -84,46 +57,3 @@ scrape_configs:
       regex: (.+)
       target_label: __metrics_path__
       replacement: /api/v1/nodes/${1}/proxy/metrics/cadvisor
-  
-  - job_name: 'mysql'
-   
-    kubernetes_sd_configs:
-    - role: endpoints
-    
-    relabel_configs:
-    - source_labels: [__meta_kubernetes_namespace]
-      action: replace
-      target_label: namespace
-    - source_labels: [__meta_kubernetes_pod_name]
-      action: replace
-      target_label: pod
-      
-    - source_labels: [pod]
-      regex: mysql-5-7.*|mariadb-master-10-4.*
-      action: keep  
-
-    - source_labels: [__address__]
-      target_label: __address__
-      regex: '([^:]+)(:[3306]+)?'
-      replacement: '${1}'
-      action: drop
-      
-    - source_labels: [__address__]
-      regex: '.*'
-      target_label: instance
-      replacement: 'Appz${1}'
-
-  - job_name: 'blackbox'
-    metrics_path: /probe
-    params:
-     module: [http_2xx] 
-    static_configs:
-    - targets:
-       
-    relabel_configs:
-      - source_labels: [__address__]
-        target_label: __param_target
-      - source_labels: [__param_target]
-        target_label: instance
-      - target_label: __address__
-        replacement: blackbox-exporter-0-2:9115
