--- a/appz.yml
+++ b/appz.yml
@@ -14,7 +14,7 @@ deploy:
     context: alpha/DEV
     type: statefulset
     replicas: 1
-    resources: large
+    resources: xx-large
     port:
     - 9090
 
