--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -34,7 +34,7 @@ scrape_configs:
     # Optional TLS configuration; see https://prometheus.io/docs/operating/configuration/#<tls_config>
     #tls_config:
     static_configs:
-      - targets: ['appz.1276c99e.lowtouch.cloud/logs.alpha-dev']  
+      - targets: ['appz-logcollectorgl-3-1:9000']  
   - job_name: 'node-exporter'
     static_configs:
     - targets: ['172.31.20.210:9100','172.31.48.127:9100','172.31.62.118:9100']
