--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -13,10 +13,9 @@ rule_files:
   - /opt/bitnami/prometheus/conf/rules.yaml
   - /opt/bitnami/prometheus/conf/alerts.yaml
 scrape_configs:
-  - job_name: prometheus
+  - job_name: 'prometheus'
     static_configs:
-      - targets:
-          - localhost:9090
+    - targets: ['localhost:9090']
   - job_name: graylog
     scrape_interval: 15s
     metrics_path: /api/plugins/org.graylog.plugins.metrics.prometheus/metrics
@@ -24,20 +23,22 @@ scrape_configs:
       username: admin
       password: 4FTZOx9ACdbAw65WJH1u
     static_configs:
-      - targets:
-          - appz-logcollectorgl-3-1:9000
-  - job_name: node-exporter
+    - targets:
+        - appz-logcollectorgl-3-1:9000
+  - job_name: 'node-exporter'
     static_configs:
     - targets: ['172.31.20.210:9100','172.31.48.127:9100','172.31.62.118:9100',]
     metric_relabel_configs:
       - source_labels:
           - nodename
         regex: '(qa.master)'
+        source_labels: ['nodename']
         target_label: nodename
         replacement: appz-${1}
       - source_labels:
           - nodename
         regex: 'qa.worker.node.(.*)'
+        source_labels: ['nodename']
         target_label: nodename
         replacement: appz-${1}
   - job_name: kube-state-metrics
