--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -1,87 +1,59 @@
----
+# my global config
 global:
-  scrape_interval: 15s
-  evaluation_interval: 15s
-  external_labels:
-    datacenter: primary
+  scrape_interval:     15s # Set the scrape interval to every 15 seconds. Default is every 1 minute.
+  evaluation_interval: 15s # Evaluate rules every 15 seconds. The default is every 1 minute.
+  # scrape_timeout is set to the global default (10s).
+
+# Alertmanager configuration
 alerting:
   alertmanagers:
-    - static_configs:
-        - targets:
-            - alert-manager-0-2:9093
+  - static_configs:
+    - targets:
+       - alert-manager-0-2:9093
+
+# Load rules once and periodically evaluate them according to the global 'evaluation_interval'.
 rule_files:
-  - /opt/bitnami/prometheus/conf/rules.yaml
-  - /opt/bitnami/prometheus/conf/alerts.yaml
+   - /opt/bitnami/prometheus/conf/rules.yaml 
+   - /opt/bitnami/prometheus/conf/alerts.yaml
+
+# A scrape configuration containing exactly one endpoint to scrape:
+# Here it's Prometheus itself.
 scrape_configs:
+  # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
   - job_name: 'prometheus'
     static_configs:
     - targets: ['localhost:9090']
-  - job_name: graylog
-    scrape_interval: 15s
-    metrics_path: /api/plugins/org.graylog.plugins.metrics.prometheus/metrics
-    basic_auth:
-      username: admin
-      password: 4FTZOx9ACdbAw65WJH1u
-    static_configs:
-    - targets:
-        - appz-logcollectorgl-3-1:9000
+  
   - job_name: 'node-exporter'
     static_configs:
     - targets: ['172.31.20.210:9100','172.31.48.127:9100','172.31.62.118:9100',]
     metric_relabel_configs:
       - source_labels: ['nodename']
         regex: '(qa.master)'
-        source_labels: ['nodename']
         target_label: nodename
         replacement: appz-${1}
       - source_labels: ['nodename']
         regex: 'qa.worker.node.(.*)'
         target_label: nodename
-        replacement: appz-${1}
-  - job_name: kube-state-metrics
+        replacement: appz-dev-worker-${1}
+  
+  - job_name: 'kube-state-metrics'
     static_configs:
     - targets: ['kube-state-metrics.kube-system.svc.cluster.local:8080']
-  - job_name: kubernetes-cadvisor
+
+  - job_name: 'kubernetes-cadvisor'
     scheme: https
     tls_config:
       ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
     bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
     kubernetes_sd_configs:
-      - role: node
+    - role: node
     relabel_configs:
-      - action: labelmap
-        regex: __meta_kubernetes_node_label_(.+)
-      - target_label: __address__
-        replacement: kubernetes.default.svc:443
-      - source_labels:
-          - __meta_kubernetes_node_name
-        regex: (.+)
-        target_label: __metrics_path__
-        replacement: /api/v1/nodes/${1}/proxy/metrics/cadvisor
-  - job_name: redis
-    kubernetes_sd_configs:
-      - role: endpoints
-    relabel_configs:
-      - source_labels:
-          - __meta_kubernetes_namespace
-        action: replace
-        target_label: namespace
-      - source_labels:
-          - __meta_kubernetes_pod_name
-        action: replace
-        target_label: pod
-      - source_labels:
-          - pod
-        regex: ((.*)redis(.*))
-        action: keep
-      - source_labels:
-          - __address__
-        target_label: __address__
-        regex: ([^:]+)(:[6379]+)?
-        replacement: ${1}
-        action: drop
-      - source_labels:
-          - __address__
-        regex: .*
-        target_label: instance
-        replacement: AppZ${1}
+    - action: labelmap
+      regex: __meta_kubernetes_node_label_(.+)
+    - target_label: __address__
+      replacement: kubernetes.default.svc:443
+    - source_labels: [__meta_kubernetes_node_name]
+      regex: (.+)
+      target_label: __metrics_path__
+      replacement: /api/v1/nodes/${1}/proxy/metrics/cadvisor
