--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -27,7 +27,7 @@ scrape_configs:
         - appz-logcollectorgl-3-1:9000
   - job_name: 'node-exporter'
     static_configs:
-    - targets: ['172.31.20.210:9100','172.31.48.127:9100','172.31.62.118:9100',]
+    - targets: ['172.31.20.210:9100','172.31.48.127:9100','172.31.62.118:9100','172.31.51.187:9100']
     metric_relabel_configs:
       - source_labels: ['nodename']
         regex: '(qa.master)'
