--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -23,8 +23,10 @@ scrape_configs:
       username: admin
       password: 12SRS199512PPJ
     static_configs:
-    - targets:
-        - graylog-5-2:9000
+      - targets: ['sranjan1995-dev-graylog-5-2.1276c99e.lowtouch.cloud/']
+    #static_configs:
+   # - targets:
+    #    - graylog-5-2:9000
   - job_name: 'node-exporter'
     static_configs:
     - targets: ['172.31.20.210:9100','172.31.48.127:9100','172.31.62.118:9100','172.31.51.187:9100']
