--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -23,7 +23,7 @@ scrape_configs:
       username: admin
       password: 12SRS199512PPJ
     static_configs:
-    - targets: ['sranjan1995-dev-graylog-5-2.1276c99e.lowtouch.cloud/']
+    - targets: ['sranjan1995-dev-graylog-5-2.1276c99e.lowtouch.cloud']
     #static_configs:
     #- targets:
     #    - graylog-5-2:9000
