--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -18,15 +18,15 @@ scrape_configs:
     - targets: ['localhost:9090']
   - job_name: graylog
     scrape_interval: 15s
-    metrics_path: /api/plugins/org.graylog.plugins.metrics.prometheus/metrics
+    #metrics_path: /api/plugins/org.graylog.plugins.metrics.prometheus/metrics
     basic_auth:
       username: admin
       password: 12SRS199512PPJ
-    static_configs:
-    - targets: ['sranjan1995-dev-graylog-5-2.1276c99e.lowtouch.cloud']
     #static_configs:
-    #- targets:
-    #    - graylog-5-2:9000
+    #- targets: ['sranjan1995-dev-graylog-5-2.1276c99e.lowtouch.cloud']
+    static_configs:
+    - targets:
+        - graylog-5-2:9833
   - job_name: 'node-exporter'
     static_configs:
     - targets: ['172.31.20.210:9100','172.31.48.127:9100','172.31.62.118:9100','172.31.51.187:9100']
