--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -16,16 +16,17 @@ scrape_configs:
   - job_name: 'prometheus'
     static_configs:
     - targets: ['localhost:9090']
-  - job_name: graylog
-    scrape_interval: 15s
+  #- job_name: graylog
+   # scrape_interval: 15s
     #metrics_path: /api/plugins/org.graylog.plugins.metrics.prometheus/metrics
-    basic_auth:
-      username: admin
-      password: 12SRS199512PPJ
+    #basic_auth:
+      #username: admin
+      #password: 12SRS199512PPJ
     #static_configs:
     #- targets: ['sranjan1995-dev-graylog-5-2.1276c99e.lowtouch.cloud']
-    static_configs:
-    - targets: ['graylog-5-2.sranjan1995-dev:9833']
+    #static_configs:
+    #- targets: ['graylog-5-2.sranjan1995-dev:9833']
+  
   - job_name: 'node-exporter'
     static_configs:
     - targets: ['172.31.20.210:9100','172.31.48.127:9100','172.31.62.118:9100','172.31.51.187:9100']
