--- a/alerts.yaml
+++ b/alerts.yaml
@@ -138,3 +138,42 @@ groups:
     annotations:
       summary: "HTTP 200 Fail"
       description: "HTTP status code other than \"200\" has been returned\n HTTP STATUS {{ $value }}"
+
+- name: kubernetes-resources
+  rules:
+  - alert: HighCpuUsage
+    expr: sum(rate(container_cpu_usage_seconds_total{namespace="alpha-dev"}[5m])) by (pod_name) > 0.8
+    for: 5m
+    labels:
+      severity: warning
+    annotations:
+      summary: "High CPU usage detected"
+      description: "Pod {{ $labels.pod_name }} in namespace {{ $labels.namespace }} is using > 80% CPU for the last 5 minutes."
+
+  - alert: HighMemoryUsage
+    expr: sum(container_memory_usage_bytes{namespace="alpha-dev"}) by (pod_name) > 500 * 1024 * 1024
+    for: 5m
+    labels:
+      severity: warning
+    annotations:
+      summary: "High Memory usage detected"
+      description: "Pod {{ $labels.pod_name }} in namespace {{ $labels.namespace }} is using > 500MB memory for the last 5 minutes."
+
+  - alert: HighCpuUsage
+    expr: sum(rate(container_cpu_usage_seconds_total{namespace="sranjan1995-dev"}[5m])) by (pod_name) > 0.8
+    for: 5m
+    labels:
+      severity: warning
+    annotations:
+      summary: "High CPU usage detected"
+      description: "Pod {{ $labels.pod_name }} in namespace {{ $labels.namespace }} is using > 80% CPU for the last 5 minutes."
+
+  - alert: HighMemoryUsage
+    expr: sum(container_memory_usage_bytes{namespace="sranjan1995-dev"}) by (pod_name) > 500 * 1024 * 1024
+    for: 5m
+    labels:
+      severity: warning
+    annotations:
+      summary: "High Memory usage detected"
+      description: "Pod {{ $labels.pod_name }} in namespace {{ $labels.namespace }} is using > 500MB memory for the last 5 minutes."
+
