--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -16,16 +16,17 @@ scrape_configs:
   - job_name: 'prometheus'
     static_configs:
     - targets: ['localhost:9090']
-    - job_name: 'node-exporter'
+
+  - job_name: 'node-exporter'
     static_configs:
     - targets: ['10.0.1.21:9100','10.0.2.246:9100','10.0.2.181:9100']
     metric_relabel_configs:
       - source_labels: ['nodename']
-        regex: '(qa.master)'
+        regex: '(engine.master)'
         target_label: nodename
         replacement: appz-${1}
       - source_labels: ['nodename']
-        regex: 'qa.worker.node.(.*)'
+        regex: 'k8s.worker.node.(.*)'
         target_label: nodename
         replacement: appz-${1}
   - job_name: kube-state-metrics
@@ -47,8 +48,8 @@ scrape_configs:
           - __meta_kubernetes_node_name
         regex: (.+)
         target_label: __metrics_path__
-        replacement: /api/v1/nodes/${1}/proxy/metrics/cadvisor
-    - job_name: redis
+        replacement: /api/v1/nodes/${1}/proxy/metrics/cadvisor 
+  - job_name: redis
     kubernetes_sd_configs:
       - role: endpoints
     relabel_configs:
