--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -1,82 +1,78 @@
-# my global config
+---
 global:
-  scrape_interval:     15s # Set the scrape interval to every 15 seconds. Default is every 1 minute.
-  evaluation_interval: 15s # Evaluate rules every 15 seconds. The default is every 1 minute.
-  # scrape_timeout is set to the global default (10s).
-
-# Alertmanager configuration
+  scrape_interval: 15s
+  evaluation_interval: 15s
+  external_labels:
+    datacenter: primary
 alerting:
   alertmanagers:
-  - static_configs:
-    - targets:
-       - alert-manager-0-2:9093
-
-# Load rules once and periodically evaluate them according to the global 'evaluation_interval'.
+    - static_configs:
+        - targets:
+            - alert-manager-0-2:9093
 rule_files:
-   - /opt/bitnami/prometheus/conf/rules.yaml 
-   - /opt/bitnami/prometheus/conf/alerts.yaml
-
-# A scrape configuration containing exactly one endpoint to scrape:
-# Here it's Prometheus itself.
+  - /opt/bitnami/prometheus/conf/rules.yaml
+  - /opt/bitnami/prometheus/conf/alerts.yaml
 scrape_configs:
-  # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
   - job_name: 'prometheus'
     static_configs:
     - targets: ['localhost:9090']
-  - job_name: 'graylog'
-    scrape_interval: 15s
-    metrics_path: '/api/plugins/org.graylog.plugins.metrics.prometheus/metrics'
-    basic_auth:
-      username: admin
-      password: 4FTZOx9ACdbAw65WJH1u
-    # Optional TLS configuration; see https://prometheus.io/docs/operating/configuration/#<tls_config>
-    #tls_config:
-    static_configs:
-      - targets: ['appz.1276c99e.lowtouch.cloud:443/logs.alpha-dev/']
-      
+
   - job_name: 'node-exporter'
     static_configs:
-    - targets: ['172.31.17.121:9100','172.31.28.19:9100','172.31.25.240:9100','172.31.31.27:9100','172.31.24.133:9100','192.168.184.194:9100','192.168.96.134:9100','192.168.130.193:9100']
+    - targets: ['10.0.2.3:9100']
     metric_relabel_configs:
       - source_labels: ['nodename']
         regex: '(engine.master)'
         target_label: nodename
         replacement: appz-${1}
       - source_labels: ['nodename']
-        regex: 'k8s.(.*)'
+        regex: 'k8s.worker.node.(.*)'
         target_label: nodename
         replacement: appz-${1}
-      - source_labels: ['nodename']
-        regex: 'ip-192-168-103-189.us-east-2.compute.internal'
-        target_label: nodename
-        replacement: appz-qa-worker-1
-      - source_labels: ['nodename']
-        regex: 'ip-192-168-163-143.us-east-2.compute.internal'
-        target_label: nodename
-        replacement: appz-qa-worker-2
-      - source_labels: ['nodename']
-        regex: 'ip-192-168-130-193.us-east-2.compute.internal'
-        target_label: nodename
-        replacement: appz-prod-worker-1 
-  - job_name: 'kube-state-metrics'
+  - job_name: kube-state-metrics
     static_configs:
     - targets: ['kube-state-metrics.kube-system.svc.cluster.local:8080']
-
-  - job_name: 'kubernetes-cadvisor'
+  - job_name: kubernetes-cadvisor
     scheme: https
     tls_config:
       ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
     bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
     kubernetes_sd_configs:
-    - role: node
+      - role: node
     relabel_configs:
-    - action: labelmap
-      regex: __meta_kubernetes_node_label_(.+)
-    - target_label: __address__
-      replacement: kubernetes.default.svc:443
-    - source_labels: [__meta_kubernetes_node_name]
-      regex: (.+)
-      target_label: __metrics_path__
-      replacement: /api/v1/nodes/${1}/proxy/metrics/cadvisor
-      
- 
+      - action: labelmap
+        regex: __meta_kubernetes_node_label_(.+)
+      - target_label: __address__
+        replacement: kubernetes.default.svc:443
+      - source_labels:
+          - __meta_kubernetes_node_name
+        regex: (.+)
+        target_label: __metrics_path__
+        replacement: /api/v1/nodes/${1}/proxy/metrics/cadvisor 
+  - job_name: redis
+    kubernetes_sd_configs:
+      - role: endpoints
+    relabel_configs:
+      - source_labels:
+          - __meta_kubernetes_namespace
+        action: replace
+        target_label: namespace
+      - source_labels:
+          - __meta_kubernetes_pod_name
+        action: replace
+        target_label: pod
+      - source_labels:
+          - pod
+        regex: ((.*)redis(.*))
+        action: keep
+      - source_labels:
+          - __address__
+        target_label: __address__
+        regex: ([^:]+)(:[6379]+)?
+        replacement: ${1}
+        action: drop
+      - source_labels:
+          - __address__
+        regex: .*
+        target_label: instance
+        replacement: AppZ${1}
