--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -26,7 +26,7 @@ scrape_configs:
     metrics_path: '/_prometheus/metrics'
   - job_name: 'node-exporter'
     static_configs:
-    - targets: ['172.31.20.210:9100','172.31.48.127:9100','172.31.62.118:9100','172.31.51.187:9100']
+    - targets: ['10.0.8.68:9100','10.0.137.203:9100','10.0.141.234:9100']
     metric_relabel_configs:
       - source_labels: ['nodename']
         regex: '(qa.master)'
