--- a/alerts.yaml
+++ b/alerts.yaml
@@ -51,129 +51,10 @@ groups:
 - name: CPU-load
   rules:
   - alert: HighNodeCPU
-    expr: node_load15 / count by (instance, job) (node_cpu_seconds_total{mode="idle"}) >=2
+    expr: rate(node_load15[5m])*100 > 85
     for : 5m
     labels:
       severity: warning
     annotations:
       summary: "High CPU load (instance {{ $labels.instance }})"
       description: "CPU load is high\n  VALUE = {{ $value }}\n  LABELS: {{ $labels }}"
-      
-#Blackbox alerts
-
-- name: SSL-Expire-30Days
-  rules:
-  - alert: BlackboxSslCertificateWillExpireSoon
-    expr: probe_ssl_earliest_cert_expiry - time() < 86400 * 30
-    for: 2m
-    labels:
-      severity: warning
-    annotations:
-      summary: Blackbox SSL certificate will expire soon (instance {{ $labels.instance }})
-      description: "SSL certificate expires in 30 days\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
-
-- name: SSL-Expire-7Days
-  rules:
-  - alert: BlackboxSslCertificateWillExpireSoon
-    expr: probe_ssl_earliest_cert_expiry - time() < 86400 * 7
-    for: 0m
-    labels:
-      severity: critical
-    annotations:
-      summary: Blackbox SSL certificate will expire soon (instance {{ $labels.instance }})
-      description: "SSL certificate expires in 3 days\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
-
-- name: SSL-Expired
-  rules:
-  - alert: BlackboxSslCertificateExpired
-    expr: probe_ssl_earliest_cert_expiry - time() <= 0
-    for: 0m
-    labels:
-      severity: critical
-    annotations:
-      summary: Blackbox SSL certificate expired (instance {{ $labels.instance }})
-      description: "SSL certificate has expired already\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
-
-- name: slow-http-1sec
-  rules:
-  - alert: BlackboxProbeSlowHttp
-    expr: avg_over_time(probe_http_duration_seconds[1m]) > 1
-    for: 100m
-    labels:
-      severity: warning
-    annotations:
-      summary: Blackbox probe slow HTTP (instance {{ $labels.instance }})
-      description: "HTTP request took more than 1s\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
-
-
-- name: slow-http-3sec
-  rules:
-  - alert: BlackboxProbeSlowHttp
-    expr: avg_over_time(probe_http_duration_seconds[1m]) > 3
-    for: 100m
-    labels:
-      severity: critical
-    annotations:
-      summary: Blackbox probe slow HTTP (instance {{ $labels.instance }})
-      description: "HTTP request took more than 3s\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
-
-- name: site-down
-  rules:
-  - alert: SiteDown
-    expr: probe_success == 0
-    for: 5m
-    labels:
-      severity: "critical"
-    annotations:
-      summary: "Site {{ $labels.instance }} down"
-      description: "HTTP probe fail"
-
-- name: status-other-than-200
-  rules:
-  - alert: http-200-fail
-    expr: probe_http_status_code != 200
-    for: 5m
-    labels:
-      severity: critical
-    annotations:
-      summary: "HTTP 200 Fail"
-      description: "HTTP status code other than \"200\" has been returned\n HTTP STATUS {{ $value }}"
-
-- name: kubernetes-resources
-  rules:
-  - alert: HighCpuUsage
-    expr: sum(rate(container_cpu_usage_seconds_total{namespace="alpha-dev"}[5m])) by (pod_name) > 0.8
-    for: 5m
-    labels:
-      severity: warning
-    annotations:
-      summary: "High CPU usage detected"
-      description: "Pod {{ $labels.pod_name }} in namespace {{ $labels.namespace }} is using > 80% CPU for the last 5 minutes."
-
- # - alert: HighMemoryUsage
-  #  expr: sum(container_memory_usage_bytes{namespace="alpha-dev"}) by (pod_name) > 500 * 1024 * 1024
-   # for: 5m
-    #labels:
-     # severity: warning
-    #annotations:
-    #  summary: "High Memory usage detected"
-    #  description: "Pod {{ $labels.pod_name }} in namespace {{ $labels.namespace }} is using > 500MB memory for the last 5 minutes."
-
-  - alert: HighCpuUsage
-    expr: sum(rate(container_cpu_usage_seconds_total{namespace="sranjan1995-dev"}[5m])) by (pod_name) > 0.8
-    for: 5m
-    labels:
-      severity: warning
-    annotations:
-      summary: "High CPU usage detected"
-      description: "Pod {{ $labels.pod_name }} in namespace {{ $labels.namespace }} is using > 80% CPU for the last 5 minutes."
-
-  - alert: HighMemoryUsage
-    expr: sum(container_memory_usage_bytes{namespace="sranjan1995-dev"}) by (pod_name) > 500 * 1024 * 1024
-    for: 5m
-    labels:
-      severity: warning
-    annotations:
-      summary: "High Memory usage detected"
-      description: "Pod {{ $labels.pod_name }} in namespace {{ $labels.namespace }} is using > 500MB memory for the last 5 minutes."
-
