--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -1,4 +1,3 @@
----
 global:
   scrape_interval: 15s
   evaluation_interval: 15s
@@ -15,18 +14,20 @@ rule_files:
 scrape_configs:
   - job_name: 'prometheus'
     static_configs:
-    - targets: ['localhost:9090']
+      - targets: ['localhost:9090']
+
   - job_name: 'graylog'
     static_configs:
-            - targets: ['10.152.183.166:9833']
+      - targets: ['10.152.183.166:9833']
 
   - job_name: 'opensearch'
     static_configs:
-            - targets: ['10.152.183.91:9200']
+      - targets: ['10.152.183.91:9200']
     metrics_path: '/_prometheus/metrics'
+
   - job_name: 'node-exporter'
     static_configs:
-    - targets: ['10.0.8.68:9100','10.0.137.203:9100','10.0.141.234:9100']
+      - targets: ['10.0.8.68:9100','10.0.137.203:9100','10.0.141.234:9100']
     metric_relabel_configs:
       - source_labels: ['nodename']
         regex: '(qa.master)'
@@ -36,9 +37,11 @@ scrape_configs:
         regex: 'qa.worker.node.(.*)'
         target_label: nodename
         replacement: appz-${1}
+
   - job_name: kube-state-metrics
     static_configs:
-    - targets: ['kube-state-metrics.kube-system.svc.cluster.local:8080']
+      - targets: ['kube-state-metrics.kube-system.svc.cluster.local:8080']
+
   - job_name: kubernetes-cadvisor
     scheme: https
     tls_config:
@@ -56,17 +59,18 @@ scrape_configs:
         regex: (.+)
         target_label: __metrics_path__
         replacement: /api/v1/nodes/${1}/proxy/metrics/cadvisor
+
   - job_name: 'blackbox'
     metrics_path: /probe
     params:
-     module: [http_2xx] 
+      module: [http_2xx]
     static_configs:
-    - targets:
-       - https://sranjan1995-dev-graylog-5-2.1276c99e.lowtouch.cloud
-       #- https://eu.apexaiq.com/api/v1/health/ping/
-       #- https://az.apexaiq.com/api/v1/health/ping/
-       #- https://docs.apexaiq.com/
-       #- https://az-staging.apexaiq.com/api/v1/health/ping/
+      - targets:
+         - https://sranjan1995-dev-graylog-5-2.1276c99e.lowtouch.cloud
+         #- https://eu.apexaiq.com/api/v1/health/ping/
+         #- https://az.apexaiq.com/api/v1/health/ping/
+         #- https://docs.apexaiq.com/
+         #- https://az-staging.apexaiq.com/api/v1/health/ping/
     relabel_configs:
       - source_labels: [__address__]
         target_label: __param_target
@@ -74,6 +78,7 @@ scrape_configs:
         target_label: instance
       - target_label: __address__
         replacement: blackbox-exporter-0-2:9115 
+
   - job_name: redis
     kubernetes_sd_configs:
       - role: endpoints
@@ -101,3 +106,12 @@ scrape_configs:
         regex: .*
         target_label: instance
         replacement: AppZ${1}
+
+  - job_name: 'postgresql'
+    static_configs:
+      - targets: ['<POSTGRES_EXPORTER_HOST>:9187']
+    metrics_path: /metrics
+    relabel_configs:
+      - source_labels: [__address__]
+        target_label: instance
+
