--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -109,7 +109,7 @@ scrape_configs:
 
   - job_name: 'postgresql'
     static_configs:
-      - targets: ['postgres13-master-13-x:5432']
+      - targets: ['10.152.183.124:5432']
     metrics_path: /metrics
     relabel_configs:
       - source_labels: [__address__]
